@@ -1,5 +1,6 @@
 == master
 
+* Rename #set_preference to #write_preference
 * Add caching of preference lookups
 * Fix preferences being stored even if they didn't change
 * Release gems via rake-gemcutter instead of rubyforge
